# celery-opentelemetry-grpc-issue

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_api.py
application/: api.py  worker.py
application/utils/: celery_utils.py
